XML 宣言が漏れていたのを修正

--- a/euc-jp.xhtml
+++ b/euc-jp.xhtml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="EUC-JP"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/XHTML1/DTD/XHTML1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head>
