--- a/euc-jp.xhtml
+++ b/euc-jp.xhtml
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=EUC-JP" />
 <title>euc-jp 表示サンプル</title>
-<meta name="description" content="水馬赤いなあいうえお　浮藻に小エビも泳いでる / 柿の木栗の木かきくけこ　キツツキこつこつ枯れけやき / 大角豆に酢をかけさしすせそ　その魚浅瀬で刺しました / 立ちましょ喇叭でたちつてと　トテトテタッタと飛び立った / 蛞蝓のろのろなにぬねの　納戸にぬめってなにねばる / 鳩ポッポほろほろはひふへほ　日向のお部屋にゃ笛を吹く / まいまいネジまきまみむめも　梅の実落ちても見もしまい / 焼栗ゆで栗やいゆえよ　山田に灯のつくよいの家 / 雷鳥は寒かろらりるれろ　蓮花が咲いたら瑠璃の鳥 / わいわいわっしょいわゐうゑを　植木屋井戸がえお祭りだ">
+<meta name="description" content="水馬赤いなあいうえお　浮藻に小エビも泳いでる / 柿の木栗の木かきくけこ　キツツキこつこつ枯れけやき / 大角豆に酢をかけさしすせそ　その魚浅瀬で刺しました / 立ちましょ喇叭でたちつてと　トテトテタッタと飛び立った / 蛞蝓のろのろなにぬねの　納戸にぬめってなにねばる / 鳩ポッポほろほろはひふへほ　日向のお部屋にゃ笛を吹く / まいまいネジまきまみむめも　梅の実落ちても見もしまい / 焼栗ゆで栗やいゆえよ　山田に灯のつくよいの家 / 雷鳥は寒かろらりるれろ　蓮花が咲いたら瑠璃の鳥 / わいわいわっしょいわゐうゑを　植木屋井戸がえお祭りだ" />
 </head>
 <body>
 <p>水馬赤いなあいうえお　浮藻に小エビも泳いでる</p>
